--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:id="@+id/btn_channel1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:onClick=""
         android:text="send on channel 1"
         />
 
